# nh-ugens

./: .gitignore  CMakeLists.txt  README.md
src/chuck/: CMakeLists.txt  NHHall.cpp
src/core/: nh_hall.hpp  nh_hall_unbuffered.hpp
src/supercollider/: CMakeLists.txt  NHHall.cpp  NHHall.sc  NHHall.schelp
src/supercollider/HelpSource/Classes/: NHHall.schelp
test/: CMakeLists.txt  benchmark.cpp  rt60.cpp
